@@ -1,3 +1,9 @@
+2009-02-02  Matias De la Puente  <mfpuente.ar@gmail.com>
+
+	*  watray/watrayproject.vala:
+
+	Added get_items method to return a list of child items.
+
 2009-02-01  Matias De la Puente  <mfpuente.ar@gmail.com>
 
 	*  watray/watrayproject.vala:
